...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#272727">

        <Button
            android:id="@+id/button_put0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="1"
            android:textColor="#EFE9E9"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_put1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="2"
            android:textColor="#EFE9E9"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_put2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="3"
            android:textColor="#EFE9E9"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_put3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="4"
            android:textColor="#EFE9E9"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_put4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="5"
            android:textColor="#EFE9E9"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_put5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="6"
            android:textColor="#EFE9E9"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_put6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="7"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#272727">

        <TextView
            android:id="@+id/matchfield_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/matchfield_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/matchfield_20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/matchfield_30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/matchfield_40"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/matchfield_50"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/matchfield_60"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="30sp" />
...
