<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.MainMenu">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#272727"
            android:gravity="center"
            android:text="MODE"
            android:textColor="#1D3BFF"
            android:textSize="36sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/bluetooth_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#272727"
            android:text="BLUETOOTH"
            android:textColor="#4DB0FF"
            android:textSize="46sp">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/onDevice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#272727"
            android:text="ON DEVICE"
            android:textColor="#4DB0FF"
            android:textSize="46sp">

        </Button>

    </LinearLayout>


</LinearLayout>
