...
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

        </Button>

        <Button
            android:id="@+id/twoplayers"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="TWO PLAYERS"
            android:textColor="#4DB0FF"
...
